- Updated endpoints to be more efficient  - Added in getByID for WebMonitoring
